# engineering-docker-images

./: .docker-lock.yml  .dockerignore  .editorconfig  .flake8  .gitignore  .hadolint.yaml  .policy.yml  .vale.ini  CODEOWNERS  Dockerfile  Dockerfile.devtools  LICENSE.txt  Makefile  README.md  catalog-info.yaml  docker-compose.yaml  docker-compose.yml  docker-lock.json  mypy.ini  poetry.toml  pyproject.toml  renovate.json5
.github/: dependabot.yml  renovate.json5
.github/workflows/: approve-and-merge-dependabot-pr.yaml  pr.yaml  renovate.yaml  security-scan.yaml
.pallet/: gitconfig.yaml
docker-compose/: Dockerfile
docs/: index.md
docs/adrs/: 0001-extending-validation.md
docs/images/: devtools-golang-v1beta1.md  devtools-kubernetes-v1beta1.md  devtools-terraform-v1beta1.md  devtools-typescript-v1.md  poetry-python3.10.md  poetry-python3.11.md  poetry-python3.8.md  poetry-python3.9.md  techdocs.md
images/benthos-v4/: README.md
images/benthos-v4/context/: Dockerfile  docker-compose.yaml
images/benthos-v4/tests/: README.md  test_image.py
images/devtools-golang-v1beta1/: README.md
images/devtools-golang-v1beta1/context/: .golangci.yml  Dockerfile  Dockerfile.app  Makefile  README.md  buf-1.5.0.sha256sum  buf-fetch.sh  docker-compose.yaml  go.mod  go.sum  maker  prototool-1.10.0-Linux-x86_64.sha256sum  tools.go
images/devtools-golang-v1beta1/tests/: README.md  run  test_image.py
images/devtools-kubernetes-v1beta1/: README.md
images/devtools-kubernetes-v1beta1/context/: Dockerfile  Makefile  README.md  docker-compose.yaml  get_kubectl_checksums  go.mod  go.sum  kubeconform_0.4.13_checksums.txt  kubectl_1.23.0_checksums.txt  kubeval_0.16.1_checksums.txt  maker  tools.go
images/devtools-kubernetes-v1beta1/tests/: README.md  run  test_image.py
images/devtools-mkdocs-v1beta1/context/: .gitignore  Dockerfile  Makefile  README.md  actual.mk  docker-compose.yaml  maker  package-lock.json  package.json  requirements.base.in  requirements.base.txt  requirements.bootstrap.in  requirements.bootstrap.txt  requirements.extra.in  requirements.extra.txt  requirements.mkdocs.in  requirements.mkdocs.txt
images/devtools-piptools-v1beta1/context/: Dockerfile
images/devtools-python3.10-v1beta1/context/: Dockerfile  Dockerfile.app  Makefile  docker-compose.yaml  maker  requirements.in  requirements.txt
images/devtools-python3.10-v1beta1/tests/: test_image.py
images/devtools-terraform-v1beta1/: README.md
images/devtools-terraform-v1beta1/context/: .docker-lock.yml  .tflint.hcl  Dockerfile  Makefile  README.md  docker-compose.yaml  maker  terraform-switcher_0.13.1201_checksums.txt  terraform-switcher_0.13.1221_checksums.txt  terraform-switcher_0.13.1300_checksums.txt  terraform_switcher_checksums.txt  trivy-tf-scan  update_tfswitch.py
images/devtools-terraform-v1beta1/tests/: README.md  run  test_image.py
images/devtools-terraform/context/: Dockerfile  maker
images/devtools-terraform/old_tests/: run
images/devtools-terraform/tests/: run
images/devtools-typescript-v1/: README.md
images/devtools-typescript-v1/context/: .eslintrc.js  Dockerfile  Makefile  docker-compose.yaml  jest.config.js  maker  package-lock.json  package.json
images/devtools-typescript-v1/tests/: README.md  run
images/pip-tools-python3.10/: README.md
images/pip-tools-python3.10/context/: Dockerfile  requirements.txt
images/pip-tools-python3.10/tests/: test_image.py
images/pip-tools-python3.11/: README.md
images/pip-tools-python3.11/context/: Dockerfile  Makefile  docker-compose.yaml  requirements.in  requirements.txt
images/pip-tools-python3.9/: README.md
images/poetry-python3.10/: README.md
images/poetry-python3.11/: README.md
images/poetry-python3.8/: README.md
images/poetry-python3.9/: README.md
images/techdocs/: .gitignore  README.md
images/techdocs/context/: .prettierrc  (+15 more)
tools/: update_gh_releases.py
(+129 files in other folders)
