# THIS IS ONLY FOR TESTS
[tool.poetry]
name = "engineering-docker-images"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
isort = "^5.10.1"
black = ">=22.6.0"
flake8 = ">=4.0.1"
flake8-black = ">=0.3.3"
pyproject-flake8 = {version = ">=0.0.1a4", allow-prereleases = true}
mypy = ">=0.961"
docker = "^5.0.3"

[tool.black]
target-version = ['py310']

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files.html
profile = "black"

[tool.mypy]
python_version = 3.10
strict = true
warn_unreachable = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "images"

[tool.pytest.ini_options]
addopts = ["--capture=no", "--tb=native"]
# https://docs.pytest.org/en/stable/customize.html
# https://docs.pytest.org/en/stable/reference.html#configuration-options
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
