# THIS IS ONLY FOR TESTS
[project]
name = "engineering-docker-images"
version = "0.1.0"
description = ""
authors = []
requires-python = "^3.14"

[tool.poetry.group.dev.dependencies]
pytest = "==9.1.1"
isort = "==8.0.1"
black = "==26.5.1"
flake8 = "==7.0.0"
flake8-black = "==0.4.0"
pyproject-flake8 = "==7.0.0"
mypy = "==2.1.0"
docker = "==7.1.0"

[tool.poetry]
package-mode = false

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files.html
profile = "black"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "images"

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["--capture=no", "--tb=native"]
# https://docs.pytest.org/en/stable/customize.html
# https://docs.pytest.org/en/stable/reference.html#configuration-options
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"

[build-system]
requires = ["poetry-core==2.4.1"]
build-backend = "poetry.core.masonry.api"
